--- a/index.html
+++ b/index.html
@@ -1,81 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Buildingof by ziyadbasheer</title>
+<head>
+  <link href="buildingof-landing.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400'
+  rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Buildingof</h1>
-        <p></p>
+  <title>Buildingof.com</title>
+  <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
+</head>
 
-        <p class="view"><a href="https://github.com/ziyadbasheer/buildingof">View the Project on GitHub <small>ziyadbasheer/buildingof</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/ziyadbasheer/buildingof/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ziyadbasheer/buildingof/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ziyadbasheer/buildingof">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ziyadbasheer">ziyadbasheer</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<body>
+  <div id="content">
+    <div id="img">
+      <a href="http://buildingof.com"><img alt="Building Of" class="logo"
+      height="50px" src="buildingof-logo.svg" style=
+      "display: block; margin: auto;"> </a>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+
+    <h3 id="tagline">Chronicling the Rise and Fall of Startups</h3>
+
+    <section id="landing-page">
+      <article id="first-block">
+        <p id="first-paragraph">We're launching a resource highlighting and
+        chronicling the work it takes to launching a startup and the founders'
+        challenges and struggles along their journey, letting you in on
+        experiences, lessons, &amp; post-mortems that would otherwise remain
+        unshared.<br>
+        <br>
+        Their struggles might make you weep. You will laugh, you'll find
+        yourself living joyously, working harder, and taking on causes.</p>
+      </article>
+
+      <article id="second-block">
+        <p id="second-paragraph">We're currently curating stories from
+        entrepreneurs. Subscribe to be the first to read once they're
+        public.</p>
+      </article>
+
+      <div id="signup-form">
+        <!-- Begin MailChimp Signup Form -->
+
+        <div id="mc_embed_signup">
+          <form action=
+          "http://buildingof.us8.list-manage.com/subscribe/post?u=f2afc3c6fc0c0684fd223ef91&amp;id=93f6fad436"
+          class="validate" id="mc-embedded-subscribe-form" method="post" name=
+          "mc-embedded-subscribe-form" novalidate="" target="_blank">
+            <div class="mc-field-group">
+              <input class="required email" id="mce-EMAIL" name="EMAIL"
+              placeholder="Enter your email address" type="email" value="">
+            </div>
+
+            <div class="clear" id="mce-responses">
+              <div class="response" id="mce-error-response" style=
+              "display:none"></div>
+
+              <div class="response" id="mce-success-response" style=
+              "display:none"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+            <div style="position: absolute; left: -5000px;">
+              <input name="b_f2afc3c6fc0c0684fd223ef91_93f6fad436" type="text"
+              value="">
+            </div>
+
+            <div class="clear">
+              <input class="button" id="mc-embedded-subscribe" name="subscribe"
+              type="submit" value="Subscribe">
+            </div>
+          </form>
+        </div><!--End mc_embed_signup-->
+      </div><!-- end of email form -->
+
+      <div id="email-us">
+        <p id="email-paragraph">Additionally, get in touch if you would like to
+        share your story:<br>
+        <a href=
+        "mailto:editors@buildingof.com?subject=I'd%20like%20to%20share%20my%20story&amp;body=I'm%20currently%20working%20on%20..."
+        style=
+        "text-decoration: none; color: #37abc8; margin-bottom: 0px; -webkit-margin-after: 0em;">
+        editors@buildingof.com</a></p>
+      </div>
+    </section><script type="text/javascript">
+        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
+    </script> <script type="text/javascript">
+        try {
               var pageTracker = _gat._getTracker("UA-49984425-1");
             pageTracker._trackPageview();
             } catch(err) {}
-          </script>
-
-  </body>
+    </script>
+  </div>
+</body>
 </html>
