Fixed css reference

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <link href="buildingof-landing.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/buildingof-landing.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400'
   rel='stylesheet' type='text/css'>
 
