--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div><!-- end of email form -->
 
       <div id="email-us">
-        <p id="email-paragraph">Additionally, get in touch and we'll take care of everything if you would like to
-        share your story:<br>
+        <p id="email-paragraph">Additionally, get in touch if you would like to
+        share your story and we'll take care of everything:<br>
         <a href=
         "mailto:editors@buildingof.com?subject=I'd%20like%20to%20share%20my%20story&amp;body=I'm%20currently%20working%20on%20..."
         style=
