--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="landing-page">
       <article id="first-block">
         <p id="first-paragraph">We're launching a resource highlighting and
-        chronicling the work it takes to launching a startup and the founders'
+        chronicling the work it takes to launch a startup and the founders'
         challenges and struggles along their journey, letting you in on
         experiences, lessons, &amp; post-mortems that would otherwise remain
         unshared.<br>
