--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400'
   rel='stylesheet' type='text/css'>
 
-  <title>Buildingof.com</title>
+  <title>Buildingof</title>
   <style type="text/css">
                 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
                   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
