--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
     <section id="landing-page">
       <article id="first-block">
-        <p id="first-paragraph">We're launching a resource highlighting and
-        chronicling the work it takes to launch a startup and the founders'
+        <p id="first-paragraph">We’re launching a resource highlighting and
+        chronicling the work it takes to launch a startup and the founders’
         challenges and struggles along their journey, letting you in on
         experiences, lessons, &amp; post-mortems that would otherwise remain
         unshared.<br>
         <br>
-        Their struggles might make you weep. You will laugh, you'll find
+        Their struggles might make you weep. You will laugh, you’ll find
         yourself living joyously, working harder, and taking on causes.</p>
       </article>
 
       <article id="second-block">
-        <p id="second-paragraph">We're currently curating stories from
-        entrepreneurs. Subscribe to be the first to read once they're
+        <p id="second-paragraph">We’re currently curating stories from
+        entrepreneurs. Subscribe to be the first to read once they’re
         public.</p>
       </article>
 
@@ -79,7 +79,7 @@
 
       <div id="email-us">
         <p id="email-paragraph">Additionally, get in touch if you would like to
-        share your story and we'll take care of everything:<br>
+        share your story and we’ll take care of everything:<br>
         <a href=
         "mailto:editors@buildingof.com?subject=I'd%20like%20to%20share%20my%20story&amp;body=I'm%20currently%20working%20on%20..."
         style=
