--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <article id="second-block">
         <p id="second-paragraph">We’re currently curating stories from
         entrepreneurs. Subscribe to be the first to read once they’re
-        public.</p>
+        public.</p><br><span>We won't spam you.</span>
       </article>
 
       <div id="signup-form">
