Changed logo ref link

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -7,7 +7,7 @@
 <body>
   <nav>
     <div id="img"><a href="http://buildingof.com">
-      <img class="logo" src="buildingof-logo.svg" height="50px"; alt="Building Of">
+      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" height="50px"; alt="Building Of">
       </img>
       </a>
     </div>
