Modified nav width to keep from wrapping

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -6,8 +6,8 @@
 <title>Challenges & Learnings of Building - Buildingof.com</title>
 <body>
   <nav>
-    <div id="img"><a href="http://buildingof.com">
-      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" height="50px"; alt="Building Of">
+    <div id="img" style="width: 50%;"><a href="http://buildingof.com">
+      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" height="50px"; alt="Building Of" style="float:right;">
       </img>
       </a>
     </div>
