--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -7,7 +7,7 @@
 <body>
   <nav>
     <div id="img" style="width: 50%;"><a href="http://buildingof.com">
-      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" height="50px"; alt="Building Of" style="float:right;">
+      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" width="187px" height="50px" alt="Building Of" style="float:right;">
       </img>
       </a>
     </div>
