removed width & something

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -6,7 +6,7 @@
 <title>Challenges & Learnings of Building - Buildingof.com</title>
 <body>
   <nav>
-    <div id="img" style="width: 50%;"><a href="http://buildingof.com">
+    <div id="img"><a href="http://buildingof.com">
       <img class="logo" src="http://buildingof.com/buildingof-logo.svg" width="187px" height="50px" alt="Building Of" style="float:right;">
       </img>
       </a>
