Made some changes

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -27,26 +27,25 @@
   		</section>
 
 
-<p>We've all read a lot about releasing landing pages and MVPs to base subsequent iterations on. But I didn't fully understand what that meant until I launched something. After all, it is my project, over which I have absolute control, and I'm free to conduct it however I wish. Consequently, I'm more likely to build it as I've envisioned, perhaps against what would lead to greater adoption of the project.</p>
+<p>We've all read a lot about releasing landing pages and MVPs to solicit user feedback and base subsequent iterations upon. But I didn't fully understand how significant doing so was until I launched something. As after all, it is my project which I have absolute control over, and I'm free to conduct it however I wish. Consequently, I'm more likely to build it as I've envisioned it, perhaps against what would lead to greater adoption of the project.</p>
 
-<p>Below is an excerpt from an article I've written about succumbing to evolutionary pressure when iterating in the past:</p>
+<p>Below is an excerpt from an article I've written in the past about succumbing to evolutionary pressure when iterating:</p>
 
- <blockquote>&ldquo;I wanted to develop something on my own terms. I had a vision and wish to execute on it. I didn't care for other users. I didn't wish for my vision to be tainted by user feedback, I wish to develop based on my ideals. (That's why I developed it as a project), as had it been started as a startup, the market would have forced it to adapt (morph into what would serve users better) or perish.&rdquo;<br>
+ <blockquote>&ldquo;I wanted to develop something on my own terms. I had a vision and wish to execute on it. I didn't care for other users. I didn't wish for my vision to be tainted by user feedback, I wanted to develop based on my ideals. (That's why I developed it as a project as opposed to a startup in pursuit of commercial success), as had it been started as a startup, the market would have forced it to adapt (morph into what would serve users better) or perish.&rdquo;<br>
 <a href="https://medium.com/p/5986ba841c0d" style="text-decoration: none; font-weight: 700; margin-top: 5px; float: right;">Ziyad Basheer&mdash;Projects vs Startups</a></blockquote>
-<p style="padding-top: 25px;">This is further amplified by people's tendency to believe that they're creative geniuses, which is often nothing but misplaced conviction. I suspect that this is a significant contributor to startup failure.</p>
 
-<p>In essence, I've learned that starting off with your mind obstinately set on developing something in a particular fashion might not be wisest approach. </p>
+<p style="padding-top: 25px;">In essence, I've learned that starting off with your mind obstinately set on developing something without  in a particular fashion might not be wisest approach. </p>
 
 <h2>In Context</h2>
-<p>I started this project with a set of assumptions: it was going to be a blog. However, based on the landing page that I've released at http://buildingof.com, everyone assumed that it was going to be a newsletter, which I suppose is a valid inference. </p>
+<p>I started Building of with a set of assumptions, one of which was that it was going to be a blog. However, based on the landing page that I've released at http://buildingof.com and feedback I've received, everyone assumed that it was going to be a newsletter, which I suppose is a valid conclusion to reach based on the information I've made available. </p>
 
-<p>This led me to explore options I had not initially considered on my own., as I was concerned about hosting&mdash;an EC2 instance, or a traditional dedicated server? Managed hosting or roll my own? What about the platform? was I going to write a custom CMS myself? Or use an existing solution? After hints that it was a newsletter, I made it such, which alleviated all of these concerns. </p>
+<p>This led me to explore options I had not initially considered on my own., as I was concerned about hosting&mdash;an EC2 instance, or a traditional dedicated server? Managed hosting or roll my own? What about the platform? was I going to write a custom CMS myself? Or use an existing solution? After hints that it could be a newsletter, I considered making it such, which would've alleviated all of those concerns. </p>
 
-<p>However, developer judgment is required. As the fact that the community suggests that it ought to be a newsletter doesn't necessarily mean that it would work better if it were. It is nevertheless an option worth considering and acting upon if appropriate. </p>
+<p>However, judgment is required in the face of opinion. As the fact that the community suggests that it ought to be a newsletter doesn't necessarily mean that it would work better if it were. It is nevertheless an option worth considering and acting upon if appropriate. </p>
 
-<p>It might seem really obvious that it could've been a newsletter, and perhaps it would've been had I given it more thought, but as previously mentioned I was pursuing what I had envisioned.</p>
+<p>It might seem really obvious that it could've been a newsletter, and perhaps it would've been had I given it more thought, but as previously mentioned, I was pursuing what I had envisioned.</p>
   <footer>
-<p>PS: Note that you're part of our first 200 subscribers, so thank you. Hopefully, we'll reach great heights with your evangelism. </p>
+<p>PS: Note that you're part of our original 2,000 subscribers, so thank you. Hopefully, we'll reach great heights with your evangelism. </p>
 
 <p>So please, spread the word to those that might be interested.</p>
 
