added link and slight modification.

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -37,7 +37,7 @@
 <p style="padding-top: 25px;">In essence, I've learned that starting off with your mind obstinately set on developing something without  in a particular fashion might not be wisest approach. </p>
 
 <h2>In Context</h2>
-<p>I started Building of with a set of assumptions, one of which was that it was going to be a blog. However, based on the landing page that I've released at http://buildingof.com and feedback I've received, everyone assumed that it was going to be a newsletter, which I suppose is a valid conclusion to reach based on the information I've made available. </p>
+<p>I started Building of with a set of assumptions, one of which was that it was going to be a blog. However, based on the landing page that I've released at <a href="http://buildingof.com">Building of</a> and feedback I've received, everyone assumed that it was going to be a newsletter, which I suppose is a valid conclusion to reach based on the information that I've made available. </p>
 
 <p>This led me to explore options I had not initially considered on my own., as I was concerned about hosting&mdash;an EC2 instance, or a traditional dedicated server? Managed hosting or roll my own? What about the platform? was I going to write a custom CMS myself? Or use an existing solution? After hints that it could be a newsletter, I considered making it such, which would've alleviated all of those concerns. </p>
 
