footer padding  & removed styling from html

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -43,7 +43,7 @@
 
 <p>However, judgment is required in the face of opinion. As the fact that the community suggests that it ought to be a newsletter doesn't necessarily mean that it would work better if it were. It is nevertheless an option worth considering and acting upon if appropriate. </p>
 
-<p style="margin-bottom: 40px;">It might seem really obvious that it could've been a newsletter, and perhaps it would've been had I given it more thought, but as previously mentioned, I was pursuing what I had envisioned.</p>
+<p id="last-paragraph">It might seem really obvious that it could've been a newsletter, and perhaps it would've been had I given it more thought, but as previously mentioned, I was pursuing what I had envisioned.</p>
   <footer>
 <p>PS: Note that you're part of our original 2,000 subscribers, so thank you. Hopefully, we'll reach great heights with your evangelism. </p>
 
