--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/buildingof.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
 </head>
