--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -23,8 +23,8 @@
 <!-- end of navigational header -->
   <section id="content">
   	<article id="first">
-  		<h1 style="text-align: center; font-size: 2em">Challenges & Learnings of Building</h1>
-  		<section class="gist">This is an introductory article intended to welcome you and provide a taste of what stories on Building of are going to be like. I hope you find it enjoyable.
+  		<h1 style="text-align: left; font-size: 2em">Challenges & Learnings of Building</h1>
+  		<section class="gist">This is an introductory article intended to welcome you and provide a taste of what stories on Building of are going to be like.
   		</section>
 
 
