--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -54,7 +54,7 @@
 </blockquote>
 
 <h2>Our Thoughts</h2>
-<p class="first-paragraph">Weft is a canonical example of the gradual refinement of product aims, as your vision is furthered by immersion & increase of familiarity with a particular market, in response to which you refine your product, incorporating the information that is unlocked as you proceed.</p>
+<p class="first-paragraph">Weft is a canonical example of the gradual refinement product. Your vision is amplified by immersion &amp; increase of familiarity with a particular market, in response to which you refine your product, incorporating the information that is unlocked as you proceed.</p>
 <p>In other words, discovering all an industry entails, its intricacies and peculiarities—immersing yourself in it, enables you to create the ideal product to tackle a particular problem.</p>
  <blockquote class="pullquote">Just ensure that the market is large enough to make it a worthwhile pursuit.<br>
 </blockquote>
@@ -62,11 +62,7 @@
 
 
   <footer>
-<p>PS: Note that you're part of our original 2,000 subscribers, so thank you. Hopefully, we'll reach great heights with your evangelism. </p>
-
-<p>So please, spread the word to those that might be interested.</p>
-
-<p>Additionally, if you run a startup or know someone that does, and think that they have an interesting story to share with our subscribers, please reach out to <a href="mailto:editors@buildingof.com?subject=I'd like to share my story
+<p>PS: if you run a startup or know someone that does, and think that they have an interesting story to share with our subscribers, please reach out to <a href="mailto:editors@buildingof.com?subject=I'd like to share my story
       &body=I'm currently working on ...">editors@buildingof.com</a></p>
       </footer>
   		</article>
