padding & directory changes

--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -26,7 +26,7 @@
   	<article id="first">
   		<h1 style="text-align: left; font-size: 2.5em">Incremental Iteration</h1>
   		<section class="gist">This is the story of how Weft began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, Marc Held.
-  		</section>
+  		</section><img style="text-align: center" src="http://buildingof.com/assets/weft-logo.png" alt="Weft">
 
 <h2>How It All Started</h2>
 <p class="first-paragraph">I moved to San Francisco a couple years ago when I came out for a Quantified Self conference — the minute I got here, I fell in love with California, and canceled my return flight. Probably one of the craziest things I’ve ever done. I had absolutely nowhere to stay, I knew probably two other people out in SF, and I was just coming off the tail end of a big project. After a few day of AirBnb-ing, I ended up crashing at a hacker hostel in deep SOMA (fun fact: I had never seen another human’s feces until then, thanks SOMA!). The very first week I moved into the hacker hostel, someone managed to break in and hi-jack a bunch of relatively expensive bikes. Being the engineer that I am, I made a quick-n-dirty prototype for a bike tracker using some hardware (Arduino!) I had lying around, plus a couple other things I had to grab on sparkfun.</p>
