--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=700, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="buildingof.css"/>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/buildingof.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 </head>
 <title>Building of Weft - Buildingof.com</title>
