--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -25,7 +25,7 @@
   <section id="content">
   	<article id="first">
   		<h1 style="text-align: left; font-size: 2.5em">Incremental Iteration</h1>
-  		<section class="gist">This is the story of how <a href="http://weft.io" style="color: #AEAEAE">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, Marc Held.
+  		<section class="gist">This is the story of how <a href="http://weft.io">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, Marc Held.
   		</section><div style="text-align: center;"><a href="http://weft.io"><img src="http://buildingof.com/assets/weft-logo.png" alt="Weft"></a></div>
 
 <h2>How It All Started</h2>
