applied styling & fonts

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=700, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/buildingof.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 </head>
 <title>Challenges & Learnings of Building - Buildingof.com</title>
 <body>
