block quote changes

--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -32,7 +32,7 @@
 
 <p>Below is an excerpt from an article I've written in the past about succumbing to evolutionary pressure when iterating:</p>
 
- <blockquote>&ldquo;I wanted to develop something on my own terms. I had a vision and wish to execute on it. I didn't care for other users. I didn't wish for my vision to be tainted by user feedback, I wanted to develop based on my ideals. (That's why I developed it as a project as opposed to a startup in pursuit of commercial success), as had it been started as a startup, the market would have forced it to adapt (morph into what would serve users better) or perish.&rdquo;<br>
+ <blockquote>&ldquo;I wanted to develop something on my own terms. I had a vision and wished to execute on it. I didn't care for other users. I didn't wish for my vision to be tainted by user feedback, I wanted to develop based on my ideals. (That's why I developed it as a project as opposed to a startup in pursuit of commercial success), as had it been started as a startup, the market would have forced it to adapt (morph into what would serve users better) or perish.&rdquo;
 <a href="https://medium.com/p/5986ba841c0d" style="text-decoration: none; font-weight: 700; margin-top: 5px; float: right;">Projects vs Startups&mdash;Ziyad Basheer</a></blockquote>
 
 <p style="padding-top: 25px;">In essence, I've learned that starting off with your mind obstinately set on developing something without  in a particular fashion might not be wisest approach. </p>
