removed footer padding

--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -58,7 +58,7 @@
 <p>In other words, discovering all an industry entails, its intricacies and peculiarities—immersing yourself in it, enables you to create the ideal product to tackle a particular problem.</p>
  <blockquote class="pullquote">Just ensure that the market is large enough to make it a worthwhile pursuit.<br>
 </blockquote>
-<p>The opportunities and their accompanying challenges ahead of Weft in the logistics industry are quite substantial, and we wish Weft and the Weft team the best of luck.</p>
+<p>The opportunities and accompanying challenges ahead of Weft in the logistics industry are quite substantial, and we wish Weft and the Weft team the best of luck.</p>
 
 
   <footer>
