our thoughts padding & divider

--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -47,10 +47,10 @@
 <h2>The Market</h2>
 <p class="first-paragraph">Logistics is a big-ass industry (that’s a technical term) and there are generally a lot of people that touch the shipping process. As a result of sheer number of interacting parts, there are countless areas that can be optimized and automated, ranging from pre-shipping, to the actual shipping, and processing at ports of arrival. Heck, logistics as we know it today is a relatively recent thing; it was only the 1970s when someone realized that having an indivisible, standard unit of shipments would be able to reduce loading time by multiple orders of magnitude! Before the shipping container it would take days to load a container ship, now it only takes hours! There are still a lot of areas within logistics to left to optimize, we just thought a good start would be to make sure that everybody in the supply chain is on the same page.</p>
 <p>This extends to the entire shipping process, as there are losses incurred by shippers and ports due to various inefficiencies, whether delays, errors, inefficient routing, underutilization of capacity, and so on.</p>
- <blockquote class="pullquote">We simply wanted to provide a service to help make sure that everybody was on the same page.<br>
+ <blockquote class="pullquote" style="padding-bottom: 40px;">We simply wanted to provide a service to help make sure that everybody was on the same page.<br>
 </blockquote>
 
-<h2>Our Thoughts</h2>
+<h2 style="border-top: 1px solid #ebebeb; padding-top: 50px;">Our Thoughts</h2>
 <p class="first-paragraph"><a href="http://weft.io">Weft</a> is a canonical example of the gradual refinement product. Your vision is amplified by immersion &amp; increase of familiarity with a particular market, in response to which you refine your product, incorporating the information that is unlocked as you proceed.</p>
 <p>In other words, discovering all an industry entails, its intricacies and peculiarities—immersing yourself in it, enables you to create the ideal product to tackle a particular problem.</p>
  <blockquote class="pullquote">Ensure that the market is large enough to make it a worthwhile pursuit.<br>
