--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html>
 <head>
   <link href="stylesheets/buildingof-landing.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400'
-  rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 
   <title>Building Of</title>
   <style type="text/css">
@@ -78,7 +77,7 @@
       </div><!-- end of email form -->
 
       <div id="email-us">
-        <p id="email-paragraph">Additionally, get in touch if you would like to
+        <p id="email-paragraph" style="font-family: Lato;">Additionally, get in touch if you would like to
         share your story and we’ll take care of everything:<br>
         <a href=
         "mailto:editors@buildingof.com?subject=I'd%20like%20to%20share%20my%20story&amp;body=I'm%20currently%20working%20on%20..."
