--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -51,8 +51,8 @@
 </blockquote>
 
 <h2 style="border-top: 1px solid #ebebeb; padding-top: 50px;">Our Thoughts</h2>
-<p class="first-paragraph"><a href="http://weft.io">Weft</a> is a canonical example of the gradual refinement product. Your vision is amplified by immersion &amp; increase of familiarity with a particular market, in response to which you refine your product, incorporating the information that is unlocked as you proceed.</p>
-<p>In other words, discovering all an industry entails, its intricacies and peculiarities—immersing yourself in it, enables you to create the ideal product to tackle a particular problem.</p>
+<p class="first-paragraph"><a href="http://weft.io">Weft</a> is a canonical example of product gradual refinement. Your vision is clarified by immersion &amp; increase of familiarity with a particular market, in response to which you refine your product, incorporating the information that is unlocked as you proceed.</p>
+<p>In other words, discovering all that an industry entails, its intricacies and peculiarities—immersing yourself in it, enables you to create the ideal product to tackle a particular problem.</p>
  <blockquote class="pullquote">Ensure that the market is large enough to make it a worthwhile pursuit.<br>
 </blockquote>
 <p>The opportunities and accompanying challenges ahead of Weft in the logistics industry are quite substantial, and we wish Weft and the Weft team the best of luck.</p>
