--- a/stories/building-of-weft.html
+++ b/stories/building-of-weft.html
@@ -25,7 +25,7 @@
   <section id="content">
   	<article id="first">
   		<h1 style="text-align: left; font-size: 2.5em">Incremental Iteration</h1>
-  		<section class="gist">This is the story of how <a style="color: #808080;" href="http://weft.io">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, Marc Held. They've received seed funding from Andreessen Horowitz and early-stage venture fund Data Elite, among other investors.
+  		<section class="gist">This is the story of how <a style="color: #808080;" href="http://weft.io">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, Marc Held. <br><br>They've received seed funding from Andreessen Horowitz and early-stage venture fund Data Elite, among other investors.
   		</section>
 
 <h2>How It All Started</h2>
