--- a/stories/building-of-stacklead.html
+++ b/stories/building-of-stacklead.html
@@ -24,7 +24,7 @@
   <section id="content">
     <article id="first">
       <h1 id="title">StackLead &amp; Pain Point Resolution</h1>
-      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.<br><br>They're a <a href="http://ycombinator.com">Y Combinator</a> backed startup.
+      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.<br><br>They're also a <a href="http://ycombinator.com">Y Combinator</a> backed startup.
       </section>
 
 <p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but didn’t meet until attending MIT together in Boston. We were housemates in college and both studied computer science, where we got to enjoy a curriculum and work/life balance that is often called “drinking from a firehose”.</p>
