--- a/stories/building-of-stacklead.html
+++ b/stories/building-of-stacklead.html
@@ -31,13 +31,14 @@
 <p>After graduating MIT, Ted built software at Google on the Business Intelligence and Wallet teams, while I was working on an enterprise payments startup. We began collaborating at the end of 2013.</p>
 
 <h2>Initial Inspiration</h2>
-<p class="first-paragraph">Inspired by some physician friends, we built a mobile app for healthcare providers and it was important to identify if a new user was a physician, nurse, or administrator and the size of their institution. We were actually working on this project and found ourselves spending time looking up each new signup and trying to determine their role. </p>
-<p>From our experiences at our previous companies, we realized that understanding users was an important problem and something a lot of people needed, so we decided to do something about it.</p>
-<p>In order to to validate and understand the market, we spoke to many of our friends in sales at various Bay Area startups. We loved hearing about hacks of how they were manually researching their leads, things such as disqualifying leads that signed up with personal email addresses or paying someone on <a href="http://odesk.com">oDesk</a> to research leads in <a href="http://rapportive.com/">Rapportive</a>.</p>
-<p>It’s great to find people hacking together tools in-house or doing something manually&mdash;these are opportunities to build new startups. No one likes organizing their receipts or changing the oil in their car, and businesses similarly have lots of tasks they’d rather delegate.</p>
+<p class="first-paragraph">Inspired by some physician friends, we built a mobile app for healthcare providers and it was important to identify if a new user was a physician, nurse, or administrator and the size of their institution.</p>
+<blockquote class="pullquote">We found ourselves spending time looking up each new signup and trying to determine their role.</blockquote>
+<p>From our experiences at previous companies, we realized that understanding users was an important problem and something a lot of people needed, so we decided to do something about it.</p>
+<p>In order to to validate and understand the market, we spoke to many of our friends in sales at various Bay Area startups. We loved hearing about hacks of how they were manually researching their leads, such as disqualifying leads that sign up with their personal email addresses and hiring someone from <a href="http://odesk.com">oDesk</a> to research the rest of the leads in <a href="http://rapportive.com/">Rapportive</a>.</p>
+<p>It’s great to find people hacking together tools in-house or doing something manually&mdash;these are opportunities to build new startups. No one likes organizing their receipts or changing the oil in their car. Similarly, businesses have lots of tasks they’d rather delegate.</p>
 
 <h2>Challenges We Faced</h2>
-<p class="first-paragraph">Saying “No”, especially early on, to some customers has definitely been a business challenge. We’d love to do everything for all of our customers, but we’ve had to give up some deals where we felt the product needs of one customer, even if it were a larger one, weren’t being echoed by our other users.</p>
+<p class="first-paragraph">Saying “No”, especially early on, to some customers has definitely been a business challenge. We’d love to do everything for all of our customers, but we’ve had to give up some deals where we felt the product needs of a single customer, even if they were a larger one, weren’t being echoed by our other users.</p>
 <p>For instance, there were some early requests from B2C companies looking to identify influential bloggers among their users who could help with publicity and link building. However, StackLead is geared towards B2B salespeople and we had to politely decline these requests.</p>
  <blockquote class="pullquote" style="padding-bottom: 40px;">We needed to focus our efforts and resources on a specific segment of our potential customer pool.<br>
 </blockquote>
